# chatgpt-delegate

./: .gitignore  README.md  pyproject.toml
docs/: connector.md  index.html
skills/chatgpt-delegate/: SKILL.md
src/chatgpt_delegate/: __init__.py  connector.py
tests/: test_connector.py
