[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatgpt-delegate"
version = "0.1.0"
description = "Delegate research, thinking, writing, and web lookup tasks from Codex to ChatGPT Web via a local MCP connector."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Longbiao Chen" }]
keywords = ["chatgpt", "codex", "mcp", "delegation", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
chatgpt = ["fastmcp>=2.0,<4"]
test = ["pytest>=8,<9"]

[project.urls]
Homepage = "https://longbiaochen.github.io/chatgpt-delegate/"
Repository = "https://github.com/longbiaochen/chatgpt-delegate"
Issues = "https://github.com/longbiaochen/chatgpt-delegate/issues"

[project.scripts]
chatgpt-delegate = "chatgpt_delegate.connector:main"
chatgpt-research-connector = "chatgpt_delegate.connector:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
